# gqtest

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  configure.sh  gqtest.cmake
ci/: travis.sh
cmakeModules/: external_gtest.cmake  gmock.cmake  gqtest.cmake
src/: ApplicationFixture.cpp  ApplicationFixture.h  CMakeLists.txt  Comparators.cpp  DelayedExecution.cpp  DelayedExecution.h  Printers.cpp  Printers.h
tests/: CMakeLists.txt  ComparatorsTest.cpp  PrintersTest.cpp
